* Mon Nov 25 2024 Steven Pritchard <steve@sicura-us> - 6.12.1
- Fix use of legacy facts

* Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 6.12.0
- [puppetsync] Update module dependencies to support simp-iptables 7.x

* Wed Jan 17 2024 Richard Gardner <rick@sicura.us> - 6.11.1
- Updated hiera.yaml facts to support puppet 8

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 6.11.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 6.10.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 6.9.0
- Add AlmaLinux 8 support

* Fri Jul 28 2023 Trey Dockendorf <tdockendorf@box.com> - 6.8.0
- Support stdlib 9.x

* Mon Jul 24 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.7.0
- Add RockyLinux 8 support

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.6.0
- Update from camptocamp/systemd to puppet/systemd

* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Jun 10 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.5.0
- Changed
  - Default to `systemd` for scheduling
  - Use `--check` instead of `-C` by default to match what most scanners expect
  - Randomize the minute field so that I/O load is reduced on hosting platforms
- Added
  - Puppet 7 support
  - Allow users to choose between the following options:
    - `systemd` => Default - Use systemd timers
    - `root`    => Legacy - Update root's crontab
    - `etc`     => Scanner Compat - Update /etc/crontab using Augeas
  - When one method is chosen, the others will be disabled
- Removed
  - Puppet 5 support

* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.3
- Expanded simp/rsyslog dependendency range to < 9.0.0.
