@@ -1,3 +1,8 @@
+* Mon Jun 23 2025 Mike Riddle <mike@sicura.us> - 7.0.0
+- Removed support for el7 operating systems
+- Added support for el10 operating systems
+- Removed dependancy on simplib
+
 * Mon Nov 25 2024 Steven Pritchard <steve@sicura-us> - 6.12.1
 - Fix use of legacy facts
 
